# MLOps_course_AGH

./: README.md
lab1/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  main.py  pyproject.toml  pytest.ini  secrets.yaml  settings.py
lab1/src/: inference.py  main.py  settings.py  training.py
lab1/tests/: test_api.py  test_model.py  test_settings.py
lab1hw/: app.py  docker-compose.yaml  pyproject.toml
lab1hw/src/: inference.py
lab2/: .gitignore  README.md  compose.yaml  notebook_01_psycopg.ipynb  notebook_02_duckdb.ipynb  notebook_hw.ipynb  pyproject.toml
lab2/data/: services_table.sql
lab3/: homework.ipynb  notebook_polars.ipynb  pyproject.toml
lab4/: .gitignore
lab4/homework/: docker-compose.yaml  notebook.ipynb
lab4/milvus_db/: RAG_service.ipynb
lab4/vectorscale_db/: SQLAlchemy_setup.ipynb
lab6/: .gitignore  LAB_INSTRUCTION.ipynb  homework.ipynb  pyproject.toml
lab7/: .gitignore  README.md  lab7.ipynb  pyproject.toml
lab7/deployment/: docker-compose.yaml
lab7/deployment/onnx_app/: Dockerfile  app2.py  requirements.txt
lab7/deployment/pytorch_app/: Dockerfile  app.py  requirements.txt
lab8/: README.md  pyproject.toml
lab9/: Dockerfile  pyproject.toml
lab9/src/: inference.py
